--- a/input.css
+++ b/input.css
@@ -7,7 +7,7 @@
 body {
   min-height: 100vh;
   font-family: 'League Spartan', sans-serif;
-  background-image: url(../assets/background.svg);
+  background-image: url(./assets/background.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
