--- a/input.css
+++ b/input.css
@@ -14,7 +14,7 @@
   }
 
   .filter {
-    @apply flex overflow-hidden rounded-sm;
+    @apply flex overflow-hidden rounded-md;
   }
 
   .filter-text {
@@ -26,7 +26,7 @@
   }
 
   .job {
-    @apply md:flex md:justify-between md:items-center relative p-4 bg-white rounded-lg;
+    @apply md:flex md:justify-between md:items-center relative p-4 bg-white rounded-md;
   }
 
   .logo {
@@ -42,7 +42,7 @@
   }
 
   .detail {
-    @apply flex items-center gap-3;
+    @apply flex items-center gap-4;
   }
 
   .skills {
@@ -50,6 +50,6 @@
   }
 
   .filter-btn {
-    @apply px-2.5 py-1 rounded-sm bg-black text-white transition duration-300 hover:opacity-80;
+    @apply px-2.5 py-1 rounded-md bg-black text-white transition duration-300 hover:opacity-80;
   }
 }
